Fix task scheduling (#182)
* Added logging; fixed push scripts

* Refactor code for improved readability and maintainability; add tests for year boundary handling and invalid filenames

* refactor: Standardize batch job execution tracking and logging with a new summary DTO and dedicated listener.

* refactor: Remove JsonExecutionTracker and its tests, update documentation, and add a JSON file verification script.

* feat: Refactor metrics storage with a new `MetricsRepository`, `GlobalMetrics`, and `YearlyStorageMetrics` DTOs, replacing the old `StatsWriter` infrastructure.

* chore: Remove integration files from git.

* refactor: Consolidate batch job scheduling into a new generic framework with dedicated monitoring and updated tests.